--- a/software/src/omaha/templates/components/paging-controller.html
+++ b/software/src/omaha/templates/components/paging-controller.html
@@ -58,9 +58,9 @@
         </div>
       </div>
 
-      <div class="card-actions">
+      <div id="pagingButtonsHolder" class="card-actions">
         <paper-button on-click="_setPagingClicked">set paging</paper-button>
-        <paper-button on-click="_sendPageClicked">send page</paper-button>
+        <paper-button id="sendPageButton" on-click="_sendPageClicked">send paging</paper-button>
       </div>
     </paper-card>
     <paper-toast id="toast">Paging set to <span>{{paging}}</span></paper-toast>
@@ -78,6 +78,8 @@
 
   </template>
   <script>
+    var on = 0;
+
     Polymer({
       is: 'paging-controller',
       
@@ -96,6 +98,10 @@
           type: String,
           notify: true,
           observer: '_setInternalPaging'
+        },
+
+        value: {
+          type: String
         }
       },
 
@@ -132,6 +138,29 @@
       },
 
       _sendPageClicked: function() {
+        
+        console.log(on);
+        if(on == 1) {
+          console.log("on");
+          on--;
+          var pagingButtonsHolder = document.getElementById("pagingButtonsHolder");
+          pagingButtonsHolder.innerHTML = "";
+          pagingButtonsHolder.innerHTML = "<paper-button on-click=\"_setPagingClicked\" style=\"color: #fff;\">set paging</paper-button><paper-button id=\"sendPageButton\" on-click=\"_sendPageClicked\" style=\"color: #fff;\">send paging</paper-button>";
+        } else {
+          console.log("off");
+          on++;
+          pagingButtonsHolder.innerHTML = "";
+          pagingButtonsHolder.innerHTML = "<paper-button on-click=\"_setPagingClicked\" style=\"color: #fff;\">set paging</paper-button><paper-button id=\"sendPageButton\" on-click=\"_sendPageClicked\" style=\"color: #fff;\">stop paging</paper-button>";
+        }
+        
+        /*var pageButton = document.getElementById("sendPageButton");
+
+        if (pageButton.innerHTML === "send page") {
+          pageButton.innerHTML = "stop page";
+        } else {
+          pageButton.innerHTML = "send page";
+        }*/
+
         this.$.pagingRequest.body = {
             "speaker": this.speakerId
         };
