--- a/software/src/omaha/templates/css/styles.css
+++ b/software/src/omaha/templates/css/styles.css
@@ -82,17 +82,30 @@ paper-tabs paper-tab.iron-selected {
 .ui-widget-content .ui-state-default,
 .ui-widget-header .ui-state-default {
   background: #3f51b5;
+
+  /* Square */
+  border-radius: 4px;
+  border: 5px solid #d3d3d3;
+  margin-bottom: calc(-.008 * 100vw);
+  margin-left: calc(-.006 * 100vw);
+  width: calc(.022 * 100vw);
+  height: calc(.011 * 100vw);
+
+  /* Circle */
+  /*
   border-radius: 30px;
   border: 2px solid #d3d3d3;
-  /*
   margin-bottom: -15px;
   margin-left: -5px;
-  */
-  margin-bottom: calc(-.012 * 100vw);
-  margin-left: calc(-.005 * 100vw);
-
   width: calc(.022 * 100vw);
   height: calc(.022 * 100vw);
+  */
+
+  /*
+  margin-bottom: calc(-.012 * 100vw);
+  margin-left: calc(-.005 * 100vw);
+  */
+
 }
 
 .ui-widget-header {
