--- a/software/src/omaha/templates/components/speaker-controller.html
+++ b/software/src/omaha/templates/components/speaker-controller.html
@@ -5,8 +5,8 @@
 <link rel="import" href="/bower_components/neon-animation/neon-animation.html">
 
 <link rel="import" href="/components/simple-fit.html">
+<link rel="import" href="/components/information-viewer.html">
 <link rel="import" href="/components/volume-selector.html">
-<link rel="import" href="/components/light-controller.html">
 <link rel="import" href="/components/target-selector.html">
 <link rel="import" href="/components/averaging-controller.html">
 <link rel="import" href="/components/equalizer-controller.html">
@@ -44,7 +44,7 @@
       }
 
       averaging-controller {
-        width: 70%;
+        width: 80%;
         height: 100%;
       }
 
@@ -86,6 +86,7 @@
     </style>
     <div id="radio-container" class="layout horizontal">
       <paper-radio-group id="mode" selected="{{mode}}">
+        <paper-radio-button id="informationButton" name="information" class="flex">Information</paper-radio-button>
         <paper-radio-button id="volumeButton" name="volume" class="flex">Volume</paper-radio-button>
         <paper-radio-button id="averagingButton" name="averaging" class="flex">Comfort</paper-radio-button>
         <paper-radio-button id="targetButton" name="target" class="flex">Target</paper-radio-button>
@@ -95,15 +96,21 @@
     </div>
     <neon-animated-pages attr-for-selected="page" selected="[[mode]]" class="flex">
 
-      <neon-animatable page="averaging" class="horizontal layout" entry-animation="slide-from-right-animation" exit-animation="slide-right-animation">
+    <neon-animatable page="information" class="horizontal layout" entry-animation="slide-from-right-animation" exit-animation="slide-right-animation">
         <simple-fit class="container">
-          <averaging-controller id="averaging" speaker="[[speaker]]" averaging="[[averaging]]"></averaging-controller>
+          <information-viewer id="information"></information-viewer>
         </simple-fit>
       </neon-animatable>
 
       <neon-animatable page="volume" class="horizontal layout" entry-animation="slide-from-right-animation" exit-animation="slide-right-animation">
         <simple-fit class="container">
           <volume-selector id="volume" volume="{{volumeLevel}}" musicVolume="{{musicLevel}}"></volume-selector>
+        </simple-fit>
+      </neon-animatable>
+
+      <neon-animatable page="averaging" class="horizontal layout" entry-animation="slide-from-right-animation" exit-animation="slide-right-animation">
+        <simple-fit class="container">
+          <averaging-controller id="averaging" speaker-id="[[speakerId]]" averaging="[[averaging]]"></averaging-controller>
         </simple-fit>
       </neon-animatable>
 
@@ -164,7 +171,7 @@
 
         mode: {
           type: String,
-          value: "volume"
+          value: "information"
         },
 
         speakerId: {
