--- a/software/src/omaha/templates/components/speaker-tooltip.html
+++ b/software/src/omaha/templates/components/speaker-tooltip.html
@@ -21,7 +21,7 @@
       }
 
     </style>
-    <div>
+    <div id="tooltipInformation">
       <b id="name"></b>
       <br>
       <b id="speaker"></b>
@@ -35,6 +35,9 @@
     </div>
     <div>
       <paper-button on-click="_selectZone">zone</paper-button>
+    </div>
+    <div>
+      <paper-button on-click="_selectAllZone">all zone</paper-button>
     </div>
   </template>
   <script>
@@ -53,6 +56,10 @@
 
       _selectZone: function() {
         this.fire('zoneselected', {zone: this.speaker.zone});
+      },
+
+      _selectAllZone: function() {
+        this.fire('allzoneselected', {zone: 1})
       }
     });
   </script>
